public/stylesheets/index.css
body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  background: #F0F0F0;
}

a {
  color: #00B7FF;
}


.full-table{
  /*background: #FF1A1A;*/
  background:#F0F0F0;
  /*margin-top: 2%;*/
}
.row-selected {
  color: deepskyblue;
}

.bar {
  fill: steelblue;
}

.selection-title{
  color: steelblue;
}

.input-horizontal {
  display: inline-block;
  vertical-align: top;
}

.cpi-form {
  width: 100%;
}

#compare-div {
  margin-top: 1%;
  margin-bottom: 1%;
}

#cpi-header {
  margin-top: 0.5%;
}

.compare-row {
  margin-bottom: 0.5%;
  margin-top: 0.5%;
}

.select-compare {
  margin-right: 0.2%;
}

.table-title {
  color: black;
}

.cell {
  border: 1px solid lightgray;
  padding: 0px;
}

.table-row {
  border: 1px solid lightgrey;
  color: black;
  background-color: white;
}

.full {
  display: none;
}

/*Box plot CSS*/
.box {
  font: 10px sans-serif;
}

.box line,
.box rect,
.box circle {
  fill: #64B5F6;
  stroke: #000; /* circle stroke*/
  stroke-width: 1px;
}

.box circle {
  /*fill: #e74c3c;*/
  fill : #FFFF66;
}

.box .center {
  stroke-dasharray: 3,3;
}

.group-row {
  margin-top: 2%;
}

.whisk-row {
  margin-top: 2%;
  padding-bottom: 2%;
}

.box .outlier {
  fill: none;
  stroke: #000;
}

.cap {
  font-size: 24px;
  color: steelblue;
}
.edb-cell {
  color: black;
}

/*The top row of each table with EBD header and years*/
.table-head {
  font-size: 18px;
  color: black;
  font-weight: bold;
}


.axis {
  font: 12px sans-serif;
  shape-rendering: crispEdges;

}

.axis path,
.axis line {
  fill: none;
  stroke: black;
  shape-rendering: crispEdges;
}

.x.axis path {
  fill: none;
  stroke: black;
  shape-rendering: crispEdges;
}


.g-text {
  stroke: none;
  fill: black;
  shape-rendering: crispEdges;

}

.unit-text {
  fill: darkgrey;
  shape-rendering: crispEdges;
}


/*Nav bar css*/
/*https://work.smarchal.com/twbscolor/css/e74c3cc0392becf0f1ffbbbc0*/

.navbar-default {
  background-color: #e74c3c;
  border-color: #c0392b;
}
.navbar-default .navbar-brand {
  color: #ecf0f1;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #ffbbbc;
}
.navbar-default .navbar-text {
  color: #ecf0f1;
}
.navbar-default .navbar-nav > li > a {
  color: #ecf0f1;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #ffbbbc;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #ffbbbc;
  background-color: #c0392b;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  color: #ffbbbc;
  background-color: #c0392b;
}
.navbar-default .navbar-toggle {
  border-color: #c0392b;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: #c0392b;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #ecf0f1;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border-color: #ecf0f1;
}
.navbar-default .navbar-link {
  color: #ecf0f1;
}
.navbar-default .navbar-link:hover {
  color: #ffbbbc;
}

@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
    color: #ecf0f1;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #ffbbbc;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #ffbbbc;
    background-color: #c0392b;
  }
}

